--- a/scss/common/_globals.scss
+++ b/scss/common/_globals.scss
@@ -92,3 +92,10 @@ h4 {
     line-height: 157%;
     color: var(--color-neutral-20);
 }
+
+.testimonials__name {
+    font-family: var(--font-family-switzer-med);
+    font-size: 14px;
+    line-height: 157%;
+    color: var(--color-neutral-0);
+}
