--- a/scss/common/_globals.scss
+++ b/scss/common/_globals.scss
@@ -99,3 +99,50 @@ h4 {
     line-height: 157%;
     color: var(--color-neutral-0);
 }
+
+.testimonials__title {
+    color: var(--color-neutral-0)
+}
+
+.testimonials__title {
+    color: var(--color-neutral-0)
+}
+
+.testimonials__title-text {
+    font-size: 16px;
+    line-height: 150%;
+    color: var(--color-primary-300)
+}
+
+.testimonials__text,
+.testimonials__text2 {
+    font-size: 16px;
+    line-height: 150%;
+    color: var(--color-neutral-0);
+}
+
+.contacts__text {
+    font-size: 16px;
+    line-height: 150%;
+    color: var(--color-primary-300);
+}
+
+.contacts__form-title {
+    font-family: var(--font-family-switzer-med);
+    font-size: 16px;
+    line-height: 150%;
+    color: var(--color-primary-500);
+}
+
+.contacts__button {
+    font-family: var(--font-family-switzer-sem);
+    font-size: 16px;
+    line-height: 175%;
+    color: var(--color-neutral-0);
+}
+
+.contacts__textarea {
+    font-size: 16px;
+    line-height: 150%;
+    color: var(--color-neutral-40);
+}
