--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,4 +9,5 @@
 @import './blocks/service/service', './blocks/service/service-media';
 @import './blocks/portfolios/portfolios';
 @import './blocks/testimonials/testimonials', './blocks/testimonials/testimonials-media';
+@import './blocks/contact/contact', './blocks/contact/contact-media';
 
