--- a/scss/common/_globals.scss
+++ b/scss/common/_globals.scss
@@ -146,3 +146,16 @@ h4 {
     line-height: 150%;
     color: var(--color-neutral-40);
 }
+
+.contacts__text-title {
+    font-family: var(--font-family-switzer-med);
+    font-size: 16px;
+    line-height: 150%;
+    color: var(--color-primary-500);
+}
+
+.contacts__text {
+    font-size: 16px;
+    line-height: 150%;
+    color: var(--color-primary-400);
+}
