--- a/scss/blocks/contact/_contact.scss
+++ b/scss/blocks/contact/_contact.scss
@@ -2,17 +2,16 @@
     display: flex;
     justify-content: center;
     margin-top: 24px;
-    border: 2px solid rgb(255, 0, 0);
 
     &__content {
         display: flex;
         justify-content: space-between;
-        border: 2px dotted black;
+        align-items: center;
     }
 
     &__forms {
         margin-top: 56px;
-        border: 2px solid rgb(13, 255, 0);
+        width: 45%;
     }
 
     &__form {
@@ -28,7 +27,6 @@
         border: 1px solid var(--color-neutral-20);
         border-radius: 8px;
         padding: 8px 16px;
-        width: 480px;
         height: 40px;
         font-size: 16px;
         line-height: 150%;
@@ -41,7 +39,6 @@
         border-radius: 8px;
         padding: 8px 16px;
         margin-top: 8px;
-        width: 480px;
         height: 162px;
         resize: none;
     }
@@ -56,7 +53,35 @@
     }
 
     &__maps {
-        border: 2px solid red;
+        max-width: 393px;
+        position: relative;
     }
+
+    &__image {
+        width: 393px;
+        height: 330px;
+    }
+
+    &__location {
+        position: absolute;
+        z-index: 2;
+        top: 30%;
+        left: 40%;
+        width: 28px;
+        height: 28px;
+    }
+
+    &__info {
+        padding-top: 24px;
+    }
+
+    &__text-title {
+        padding-bottom: 8px;
+    }
+
+    &__text {
+        padding-bottom: 8px;
+    }
+
 
 }
