--- a/scss/blocks/contact/_contact.scss
+++ b/scss/blocks/contact/_contact.scss
@@ -1,7 +1,7 @@
 .contacts {
     display: flex;
     justify-content: center;
-    margin-top: 24px;
+    margin: 24px 10px 0;
 
     &__content {
         display: flex;
