--- a/scss/blocks/navigation/_navigation.scss
+++ b/scss/blocks/navigation/_navigation.scss
@@ -1,4 +1,6 @@
 .navigation {
+    position: relative;
+
     &_flex {
         display: flex;
         justify-content: flex-end;
@@ -23,7 +25,6 @@
 
     &__link {
         margin-right: 40px;
-        color: white;
 
         &:hover {
             color: blue;
@@ -44,7 +45,7 @@
     &__burger-menu {
         display: none;
         position: absolute;
-        top: 35px;
+        top: 30px;
         right: 40px;
         width: 24px;
         height: 24px;
