--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,4 +10,5 @@
 @import './blocks/portfolios/portfolios';
 @import './blocks/testimonials/testimonials', './blocks/testimonials/testimonials-media';
 @import './blocks/contact/contact', './blocks/contact/contact-media';
+@import './blocks/footer/footer', './blocks/footer/footer-media';
 
