--- a/scss/blocks/featured/_featured.scss
+++ b/scss/blocks/featured/_featured.scss
@@ -1,5 +1,9 @@
 .featured {
-    padding: 48px 10px 0;
+    padding: 48px 0 0;
+    border-radius: 0 0 8px 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    margin: 10px 10px 0;
 
     &__details {
         margin-top: 16px;
@@ -17,6 +21,7 @@
     &__content {
         padding: 32px 48px 0;
         width: 65%;
+        background: var(--color-neutral-0);
     }
 
     &__page-current {
