--- a/scss/blocks/navigation/_navigation-media.scss
+++ b/scss/blocks/navigation/_navigation-media.scss
@@ -20,6 +20,11 @@
             flex-direction: column;
             align-items: center;
             margin-top: 20px;
+
+            &_footer_fl {
+                align-items: flex-start;
+                margin-top: 10px; 
+            }
         }
 
         &__link {
