--- a/scss/common/_globals.scss
+++ b/scss/common/_globals.scss
@@ -57,7 +57,7 @@ h4 {
 
 .location__image-text {
     font-family: var(--font-family-switzer-med);
-    font-size: 16px;
+    @include fluid-size-text(18, 12);
     line-height: 150%;
     color: var(--color-neutral-0);
 }
@@ -158,4 +158,16 @@ h4 {
     font-size: 16px;
     line-height: 150%;
     color: var(--color-primary-400);
+}
+
+.navigation__link_col_wh {
+    font-size: 16px;
+    line-height: 150%;
+    color: white;
+}
+
+.navigation__link_col_nat {
+    font-size: 16px;
+    line-height: 150%;
+    color: var(--color-neutral-40);
 }
