--- a/scss/blocks/header/_header.scss
+++ b/scss/blocks/header/_header.scss
@@ -1,6 +1,6 @@
 .header {
   height: 904px;
-  background-image: url('../../images/header/img_placeholder.png');
+  background-image: url('../../../images/header/img_placeholder.svg');
   background-size: cover;
   background-position: 50% bottom;
 
