--- a/css/main.css
+++ b/css/main.css
@@ -250,7 +250,7 @@ h4 {
 
 .header {
   height: 904px;
-  background-image: url("../../images/header/img_placeholder.png");
+  background-image: url("../../../images/header/img_placeholder.svg");
   background-size: cover;
   background-position: 50% bottom;
 }
