--- a/css/main.css
+++ b/css/main.css
@@ -250,7 +250,7 @@ h4 {
 
 .header {
   height: 904px;
-  background-image: url("../../../images/header/img_placeholder.svg");
+  background-image: url("../../../images/header/foto-header.jpg");
   background-size: cover;
   background-position: 50% bottom;
 }
@@ -512,7 +512,7 @@ h4 {
 }
 .featured__image {
   width: 35%;
-  background-image: url("../../../images/featured/featured.svg");
+  background-image: url("../../../images/featured/featured.jpg");
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -542,6 +542,14 @@ h4 {
 .featured__button {
   border: none;
   background-color: transparent;
+  width: 30px;
+  height: 30px;
+}
+.featured__button:hover {
+  cursor: pointer;
+  border: 0.8px solid blue;
+  border-radius: 50%;
+  box-shadow: 0 0 2px 0 blue;
 }
 .featured__icon {
   color: var(--color-primary-300);
@@ -555,7 +563,7 @@ h4 {
   .featured__image {
     width: 100%;
     height: 229px;
-    background-image: url("../../../images/featured/featured2.svg");
+    background-image: url("../../../images/featured/featured2.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
