--- a/scss/blocks/featured/_featured-media.scss
+++ b/scss/blocks/featured/_featured-media.scss
@@ -8,7 +8,7 @@
         &__image {
             width: 100%;
             height: 229px;
-            background-image: url('../../../images/featured/featured2.svg');
+            background-image: url('../../../images/featured/featured2.jpg');
             background-position: center;
             background-repeat: no-repeat;
             background-size: contain;
