--- a/scss/blocks/featured/_featured.scss
+++ b/scss/blocks/featured/_featured.scss
@@ -12,7 +12,7 @@
 
     &__image {
         width: 35%;
-        background-image: url('../../../images/featured/featured.svg');
+        background-image: url('../../../images/featured/featured.jpg');
         background-position: 50%;
         background-repeat: no-repeat;
         background-size:cover;
@@ -49,6 +49,15 @@
     &__button {
         border: none;
         background-color: transparent;
+        width: 30px;
+        height: 30px;
+
+        &:hover {
+            cursor: pointer;
+            border: 0.8px solid blue;
+            border-radius: 50%;
+            box-shadow: 0 0 2px 0 blue;
+        }
     }
 
     &__icon {
