--- a/scss/blocks/header/_header.scss
+++ b/scss/blocks/header/_header.scss
@@ -1,6 +1,7 @@
 .header {
   height: 904px;
-  background-image: url('../../../images/header/foto-header.jpg');
+  // background-image: url('../../../images/header/foto-header.jpg');
+  background-image: url('../images/header/foto-header.jpg');
   background-size: cover;
   background-position: 50% bottom;
 
