--- a/scss/blocks/featured/_featured.scss
+++ b/scss/blocks/featured/_featured.scss
@@ -12,7 +12,7 @@
 
     &__image {
         width: 35%;
-        background-image: url('../../../images/featured/featured.jpg');
+        background-image: url('../images/featured/featured.jpg');
         background-position: 50%;
         background-repeat: no-repeat;
         background-size:cover;
