--- a/css/main.css
+++ b/css/main.css
@@ -512,7 +512,7 @@ h4 {
 }
 .featured__image {
   width: 35%;
-  background-image: url("../../../images/featured/featured.jpg");
+  background-image: url("../images/featured/featured.jpg");
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -563,7 +563,7 @@ h4 {
   .featured__image {
     width: 100%;
     height: 229px;
-    background-image: url("../../../images/featured/featured2.jpg");
+    background-image: url("../images/featured/featured2.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
