--- a/scss/common/_globals.scss
+++ b/scss/common/_globals.scss
@@ -31,7 +31,7 @@ h2 {
 h3 {
     font-family: var(--font-family-sans);
     font-weight: 700;
-    font-size: 24px;
+    @include fluid-size-text(24, 18);
     line-height: 133%;
     letter-spacing: -0.02em;
     color: var(--color-neutral-0);
@@ -88,7 +88,7 @@ h4 {
 }
 
 .portfolios__text {
-    font-size: 14px;
+    @include fluid-size-text(14, 12);
     line-height: 157%;
     color: var(--color-neutral-20);
 }
